<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueCyan"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.30"
        android:paddingBottom="15dp"
        android:background="@drawable/green_linear_gradient"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_left"
            app:layout_constraintGuide_begin="30dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_right"
            app:layout_constraintGuide_end="30dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintLeft_toLeftOf="@id/guide_left"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/calcPending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/calcResult"
            android:text=""
            android:textStyle="bold"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="@id/guide_left"
            android:textColor="@android:color/background_light"
            android:alpha = ".35"
            />

        <TextView
            android:id="@+id/calcEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/guide_left"
            android:textColor="@android:color/background_light"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/calcResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@+id/calcEqual"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:text="@string/zero"
            android:layout_marginTop="5dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calcLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintTop_toBottomOf="@+id/resultLayout"
        android:background="@color/colorAccent"
        >

        <Button
            android:id="@+id/buttonAc"
            android:tag="clear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.75"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ac"
            android:textColor="#000"

            />

        <Button
            android:id="@+id/buttonDivise"
            android:tag="operator"
            android:background="@drawable/green_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/buttonAc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/divise"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/button1"
            android:background="@drawable/grey_linear_gradient"
            android:tag="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAc"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/one"
            android:textColor="#000"

            />
        <Button
            android:id="@+id/button2"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button1"
            app:layout_constraintTop_toBottomOf="@+id/buttonAc"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintHeight_percent="0.20"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/two"
            android:textColor="#000"/>
        <Button
            android:id="@+id/button3"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/buttonAc"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/three"
            android:textColor="#000"/>
        <Button
            android:id="@+id/buttonX"
            android:tag="operator"
            android:background="@drawable/green_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/buttonDivise"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/by"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/button4"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/four"
            android:textColor="#000"

            />
        <Button
            android:id="@+id/button5"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintHeight_percent="0.20"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/five"
            android:textColor="#000"/>
        <Button
            android:id="@+id/button6"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/six"
            android:textColor="#000"/>
        <Button
            android:id="@+id/buttonLess"
            android:tag="operator"
            android:background="@drawable/green_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/buttonX"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/less"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/button7"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/seven"
            android:textColor="#000"

            />
        <Button
            android:id="@+id/button8"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintHeight_percent="0.20"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/height"
            android:textColor="#000"/>
        <Button
            android:id="@+id/button9"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/nine"
            android:textColor="#000"/>
        <Button
            android:id="@+id/buttonMore"
            android:tag="operator"
            android:background="@drawable/green_linear_gradient"
            app:layout_constraintLeft_toRightOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/buttonLess"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/more"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/button0"
            android:tag="number"
            android:background="@drawable/grey_linear_gradient"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            app:layout_constraintWidth_percent="0.50"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/zero"
            android:textColor="#000"
            />
        <Button
            android:id="@+id/buttonComa"
            app:layout_constraintLeft_toRightOf="@+id/button0"
            app:layout_constraintTop_toBottomOf="@+id/button9"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintHeight_percent="0.20"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/coma"
            android:background="@drawable/grey_linear_gradient"
            android:textColor="#000"/>
        <Button
            android:id="@+id/buttonEqual"
            android:background="@drawable/green_linear_gradient"
            android:tag="equal"
            app:layout_constraintLeft_toRightOf="@+id/buttonComa"
            app:layout_constraintTop_toBottomOf="@+id/buttonMore"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintHeight_percent="0.20"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/equal"
            android:textColor="#fff"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>